--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.8.0",
+    "bcrypt": "^5.1.1",
     "next": "14.0.4",
     "prisma": "^5.8.0",
     "react": "^18",
