--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "14.0.4",
     "prisma": "^5.8.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
