--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@prisma/client": "^5.8.0",
+    "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "next": "14.0.4",
+    "next-auth": "^5.0.0-beta.5",
     "prisma": "^5.8.0",
     "react": "^18",
     "react-dom": "^18",
