--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prisma": "^5.8.0",
     "react": "^18",
     "react-dom": "^18",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "zod": "^3.22.4"
   },
@@ -34,6 +35,7 @@
     "eslint-config-next": "14.0.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-mock-extended": "^3.0.5",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
