--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest",
+    "test": "jest --silent",
+    "test:verbose": "jest",
     "test:watch": "jest --watch"
   },
   "dependencies": {
